--- a/p7/relax_real.tex
+++ b/p7/relax_real.tex
@@ -7,7 +7,7 @@
 
 
 Релаксационные генераторы, прямо или косвенно, получили широкое распространение
-в схемотехнике. В первую очередь -- как собственно генераторы
+в схемотехнике. В первую очередь --- как собственно генераторы
 сигналов, в первую очередь пилообразной формы~[??].
 Некоторые подсистемы электрических схем, хоть и не относятся непосредственно к
 релаксационными генераторами, проявляют схожую динамику.
@@ -204,16 +204,40 @@ $ \overline{v(t_u)} \to v\Tidx{on}$.
   \label{atu:eq:V_b_relax}
 \end{equation}
 %
-где $i$ -- порядковый номер релаксационного элемента,
-$I_i(t)$ -- потребляемый им ток.
+где $i$ --- порядковый номер релаксационного элемента,
+$I_i(t)$ --- потребляемый им ток.
+
+
+Как уже было отмечено, для реализации переключающего элемента релаксационного генератора
+существует широкий спектр возможностей. Тем не менее, в рамках данной работы
+не ставятся задачи ни анализа работы какого-то определённого элемента,
+ни обзора всех существующих. Так как основной задачей данной главы является
+синтез системы идентификации для реального генератора, а также
+анализ возможности этой системы, то в качестве
+переключающих элементов релаксационных генераторов имеет смысл выбирать
+те, свойства которых позволяют как с минимальными усилиями,
+так и минимальными помехами сопрягать исследуемый генератор
+с измерительной системой, реализованной на основе микроконтроллера.
+Следовательно, из рассмотрения выпадают газоразрядные лампы,
+динисторы, и подобные элементы, требующие относительно
+высокого напряжения питания.
+
+Одним из возможных способов реализации переключающего элемента
+является схема из двух комплиментарных биполярных транзисторах,
+применённая A.S.~Elwakil и M.P.~Kennedy~[kennedy1999]
+для создания низковольтного, маломощного хаотического генератора.
+Рассмотренная в упомянутой работе схема хаотического генератора
+весьма интересна, но включает индуктивный элемент,
+что затрудняет создание достаточно точных, и в тоже время простых моделей
+из-за сложных трудно воспроизводимых гистерезисных явлений в
+ферромагнитном сердечнике. При этом относительно высокий частотный диапазон
+затрудняет процесс измерения. Поэтому, в данном исследовании
+из этой работы будет использоваться только переключающий элемент.
+
+\Cmt{здесь может быть схема и графики характеристик}
 
 
 
-Элементная база, задачи. Почему возможны хаотические режимы
-
-
-
-Не совсем прототип: Kennedy
 
 
 \cite{mishenko_du_small_relax}
@@ -222,7 +246,7 @@ $I_i(t)$ -- потребляемый им ток.
 \label{atu:sec:relax3d}
 
 
-Исследуемый хаотический генератор представляет собой
+Предлагаемый хаотический генератор представляет собой
 систему из трёх релаксационных генераторов,
 переключающий элемент в каждом из них реализован
 на паре комплиментарных транзисторов~(рис.~\ref{atu:f:relax3d_schem}).
@@ -240,7 +264,7 @@ $I_i(t)$ -- потребляемый им ток.
     работоспособность схемы при малом напряжении питания $V\Tidx{cc}$,
     желательна возможность использования общего питания с микроконтроллером,
     при этом не требуются дополнительные согласующие элементы
-    между генератором и АЦП микроконтроллера -- следовательно,
+    между генератором и АЦП микроконтроллера --- следовательно,
     меньше элементов, которые могут вносить искажения при измерении;
 
   \item
@@ -262,13 +286,15 @@ $I_i(t)$ -- потребляемый им ток.
   \label{atu:f:relax3d_board}
 \end{figure}
 
+Данную схемотехническую реализацию в дальнейшем будем обозначать как ``relax3d''.
+
 Возможность работы при низком напряжении питания в данной схеме обеспечивается
 применением переключающего элемента с параметрами
 $V\Tidx{on} \approx \SI{1.0}{\volt}$,
 $V\Tidx{off} \approx \SI{0.6}{\volt}$.
 При этом, напряжение питания $V\Tidx{cc} \approx \SI{3}{\volt}$
 обеспечивает достаточный диапазон для изменения параметров генератора.
-Любое из измеряемых напряжений $V_b$, $V_1$ -- $V_3$
+Любое из измеряемых напряжений $V_b$, $V_1$ --- $V_3$
 заведомо не превосходит $V\Tidx{cc}$,
 что позволяет использовать непосредственную связь
 между элементами схемы и АЦП микроконтроллера.
@@ -279,9 +305,9 @@ $V\Tidx{off} \approx \SI{0.6}{\volt}$.
 Относительно низкие (десятки и сотни Герц) рабочие частоты
 релаксационных элементов были получены путём выбора соответствующих
 ёмкостей:
-$C_1$ -- $C_3 = \SI{1.0}{\micro\farad}$,
+$C_1$ --- $C_3 = \SI{1.0}{\micro\farad}$,
 и сопротивлений:
-$R_{v1}$ -- $R_{v3} = 1-\SI{100}{\kilo\ohm}$.
+$R_{v1}$ --- $R_{v3} = 1-\SI{100}{\kilo\ohm}$.
 Каждое из указанных сопротивлений было подстроечным, для обеспечения
 настройки параметров каждого из генераторов. Также подстроечным было сопротивление
 $ R_{b} = 1-\SI{100}{\kilo\ohm}$.
@@ -302,7 +328,7 @@ $ R_{b} = 1-\SI{100}{\kilo\ohm}$.
 а высокочастотные помехи по шине питания блокируются
 ферритовыми бусинками непосредственно на соединительных проводах.
 
-Разъёмы $P_1$ -- $P_3$ на каждом  релаксационном элементе
+Разъёмы $P_1$ --- $P_3$ на каждом  релаксационном элементе
 выполняют по две функции.
 Во-первых, они обеспечивают точку для подключения измерительного
 оборудования при измерении величин $V_1$--$V_3$.
@@ -313,11 +339,11 @@ $ R_{b} = 1-\SI{100}{\kilo\ohm}$.
 отдельного релаксационного элемента.
 
 
-Разъёмы $P_4$ -- $P_6$
+Разъёмы $P_4$ --- $P_6$
 также выполняют по две функции.
 Во-первых, они позволяют управлять сопротивлением
 разрядки $R\Tidx{dis}$, вводя дополнительные сопротивления
-$R_4$ -- $R_6$.
+$R_4$ --- $R_6$.
 Во-вторых, с их помощью можно ввести дополнительные,
 в том числе нелинейные элементы в цепи разряда.
 
@@ -346,7 +372,7 @@ REF5025 (Texas Instruments), обеспечивающим
 
 При каждом замере
 производилась запись величин
-$V_b$, $V_1$ -- $V_3$.
+$V_b$, $V_1$ --- $V_3$.
 Частота дискретизации составляла $\SI{100}{\kilo\hertz}$,
 что несколько избыточно для измерения в данном диапазоне.
 Как показали последующие измерения,
@@ -383,7 +409,7 @@ $\SI{0.2}{\hertz}$, что с учётом погрешностей измере
 
 \begin{figure}[htb!]
   \centerline{\includegraphics[width=0.6\textwidth]{p/relax3d_t_02.png} }
-  \caption{Зависимости $V_b(t)$, $V_i(t)$ для системы рис.~\ref{atu:f:relax3d_schem} при $R_b=\SI{5.0}{\kilo\ohm}$ }
+  \caption{Зависимости $V_b(t)$, $V_i(t)$ для системы ``relax3d'' при $R_b=\SI{5.0}{\kilo\ohm}$ }
   \label{atu:f:relax3d_t_02}
 \end{figure}
 
@@ -404,7 +430,7 @@ $\SI{0.2}{\hertz}$, что с учётом погрешностей измере
     ~
     \includegraphics[width=0.48\textwidth]{p/relax3d_v1v2v3_02.png}
   }
-  \caption{Спектр $V_b(t)$, и аттрактор для системы рис.~\ref{atu:f:relax3d_schem} при $R_b=\SI{5.0}{\kilo\ohm}$ }
+  \caption{Спектр $V_b(t)$, и аттрактор для системы ``relax3d'' при $R_b=\SI{5.0}{\kilo\ohm}$ }
   \label{atu:f:relax3d_f_02}
 \end{figure}
 
@@ -420,7 +446,7 @@ $\SI{0.2}{\hertz}$, что с учётом погрешностей измере
 
 \begin{figure}[htb!]
   \centerline{\includegraphics[width=0.6\textwidth]{p/relax3d_t_08.png} }
-  \caption{Зависимости $V_b(t)$, $V_i(t)$ для системы рис.~\ref{atu:f:relax3d_schem} при $R_b=\SI{34.0}{\kilo\ohm}$ }
+  \caption{Зависимости $V_b(t)$, $V_i(t)$ для системы ``relax3d'' при $R_b=\SI{34.0}{\kilo\ohm}$ }
   \label{atu:f:relax3d_t_08}
 \end{figure}
 
@@ -435,7 +461,7 @@ $\SI{0.2}{\hertz}$, что с учётом погрешностей измере
     ~
     \includegraphics[width=0.48\textwidth]{p/relax3d_v1v2v3_08.png}
   }
-  \caption{Спектр $V_b(t)$, и аттрактор для системы рис.~\ref{atu:f:relax3d_schem} при $R_b=\SI{34.0}{\kilo\ohm}$ }
+  \caption{Спектр $V_b(t)$, и аттрактор для системы ``relax3d'' при $R_b=\SI{34.0}{\kilo\ohm}$ }
   \label{atu:f:relax3d_f_08}
 \end{figure}
 
@@ -449,7 +475,7 @@ $\SI{0.2}{\hertz}$, что с учётом погрешностей измере
 
 \begin{figure}[htb!]
   \centerline{\includegraphics[width=0.6\textwidth]{p/relax3d_t_09.png} }
-  \caption{Зависимости $V_b(t)$, $V_i(t)$ для системы рис.~\ref{atu:f:relax3d_schem} при $R_b=\SI{36.0}{\kilo\ohm}$ }
+  \caption{Зависимости $V_b(t)$, $V_i(t)$ для системы ``relax3d'' при $R_b=\SI{36.0}{\kilo\ohm}$ }
   \label{atu:f:relax3d_t_09}
 \end{figure}
 
@@ -463,7 +489,7 @@ $\SI{0.2}{\hertz}$, что с учётом погрешностей измере
     ~
     \includegraphics[width=0.48\textwidth]{p/relax3d_v1v2v3_09.png}
   }
-  \caption{Спектр $V_b(t)$, и аттрактор для системы рис.~\ref{atu:f:relax3d_schem} при $R_b=\SI{36.0}{\kilo\ohm}$ }
+  \caption{Спектр $V_b(t)$, и аттрактор для системы ``relax3d'' при $R_b=\SI{36.0}{\kilo\ohm}$ }
   \label{atu:f:relax3d_f_09}
 \end{figure}
 
@@ -476,7 +502,7 @@ $\SI{0.2}{\hertz}$, что с учётом погрешностей измере
 
 \begin{figure}[htb!]
   \centerline{\includegraphics[width=0.6\textwidth]{p/relax3d_t_22.png} }
-  \caption{Зависимости $V_b(t)$, $V_i(t)$ для системы рис.~\ref{atu:f:relax3d_schem} при $R_b=\SI{50.0}{\kilo\ohm}$ }
+  \caption{Зависимости $V_b(t)$, $V_i(t)$ для системы ``relax3d'' при $R_b=\SI{50.0}{\kilo\ohm}$ }
   \label{atu:f:relax3d_t_22}
 \end{figure}
 
@@ -491,12 +517,12 @@ $\SI{0.2}{\hertz}$, что с учётом погрешностей измере
     ~
     \includegraphics[width=0.48\textwidth]{p/relax3d_v1v2v3_22.png}
   }
-  \caption{Спектр $V_b(t)$, и аттрактор для системы рис.~\ref{atu:f:relax3d_schem} при $R_b=\SI{50.0}{\kilo\ohm}$ }
+  \caption{Спектр $V_b(t)$, и аттрактор для системы ``relax3d'' при $R_b=\SI{50.0}{\kilo\ohm}$ }
   \label{atu:f:relax3d_f_22}
 \end{figure}
 
 Таким образом установлено, что
-система электрическая схема которой приведена на рис.~\ref{atu:f:relax3d_schem},
+система ``relax3d'', электрическая схема которой приведена на рис.~\ref{atu:f:relax3d_schem},
 в интервале значений параметра $R_b \in [1;50]\;\SI{}{\kilo\ohm}$
 демонстрирует как сложно-периодическое, так и хаотическое поведение,
 причём режимы имеют тенденцию к чередованию.
@@ -591,6 +617,8 @@ $V\Tidx{on,3}  = \SI{1.81}{\volt}$.
 тем не менее существенно больше, чем в предыдущей схеме, что требует
 обязательного учёта в модели.
 
+Данную схемотехническую реализацию в дальнейшем будем обозначать как ``relax3ds''.
+
 Внешний вид собранной схеме на макетной плате представлен на~(рис.~\ref{atu:f:relax3ds_board})
 
 \begin{figure}[htb!]
@@ -613,7 +641,7 @@ $V\Tidx{on,3}  = \SI{1.81}{\volt}$.
 
 \begin{figure}[htb!]
   \centerline{\includegraphics[width=0.6\textwidth]{p/relax3ds_t_005151.png} }
-  \caption{Зависимости $V_b(t)$, $V_i(t)$ для системы рис.~\ref{atu:f:relax3ds_schem} при $R_b=\SI{5.15}{\kilo\ohm}$ }
+  \caption{Зависимости $V_b(t)$, $V_i(t)$ для системы ``relax3ds'' при $R_b=\SI{5.15}{\kilo\ohm}$ }
   \label{atu:f:relax3ds_t_05151}
 \end{figure}
 
@@ -630,7 +658,7 @@ $V\Tidx{on,3}  = \SI{1.81}{\volt}$.
     ~
     \includegraphics[width=0.48\textwidth]{p/relax3ds_v1v2v3_005151.png}
   }
-  \caption{Спектр $V_b(t)$, и аттрактор для системы рис.~\ref{atu:f:relax3ds_schem} при $R_b=\SI{5.15}{\kilo\ohm}$ }
+  \caption{Спектр $V_b(t)$, и аттрактор для системы ``relax3ds'' при $R_b=\SI{5.15}{\kilo\ohm}$ }
   \label{atu:f:relax3ds_f_05151}
 \end{figure}
 
@@ -639,7 +667,7 @@ $V\Tidx{on,3}  = \SI{1.81}{\volt}$.
 
 \begin{figure}[htb!]
   \centerline{\includegraphics[width=0.6\textwidth]{p/relax3ds_t_013246.png} }
-  \caption{Зависимости $V_b(t)$, $V_i(t)$ для системы рис.~\ref{atu:f:relax3ds_schem} при $R_b=\SI{13.25}{\kilo\ohm}$ }
+  \caption{Зависимости $V_b(t)$, $V_i(t)$ для системы ``relax3ds'' при $R_b=\SI{13.25}{\kilo\ohm}$ }
   \label{atu:f:relax3ds_t_13246}
 \end{figure}
 
@@ -653,7 +681,7 @@ $V\Tidx{on,3}  = \SI{1.81}{\volt}$.
     ~
     \includegraphics[width=0.48\textwidth]{p/relax3ds_v1v2v3_013246.png}
   }
-  \caption{Спектр $V_b(t)$, и аттрактор для системы рис.~\ref{atu:f:relax3ds_schem} при $R_b=\SI{13.25}{\kilo\ohm}$ }
+  \caption{Спектр $V_b(t)$, и аттрактор для системы ``relax3ds'' при $R_b=\SI{13.25}{\kilo\ohm}$ }
   \label{atu:f:relax3ds_f_13246}
 \end{figure}
 
@@ -663,7 +691,7 @@ $V\Tidx{on,3}  = \SI{1.81}{\volt}$.
 
 \begin{figure}[htb!]
   \centerline{\includegraphics[width=0.6\textwidth]{p/relax3ds_t_014718.png} }
-  \caption{Зависимости $V_b(t)$, $V_i(t)$ для системы рис.~\ref{atu:f:relax3ds_schem} при $R_b=\SI{14.72}{\kilo\ohm}$ }
+  \caption{Зависимости $V_b(t)$, $V_i(t)$ для системы ``relax3ds'' при $R_b=\SI{14.72}{\kilo\ohm}$ }
   \label{atu:f:relax3ds_t_14718}
 \end{figure}
 
@@ -679,7 +707,7 @@ $V\Tidx{on,3}  = \SI{1.81}{\volt}$.
     ~
     \includegraphics[width=0.48\textwidth]{p/relax3ds_v1v2v3_014718.png}
   }
-  \caption{Спектр $V_b(t)$, и аттрактор для системы рис.~\ref{atu:f:relax3ds_schem} при $R_b=\SI{14.72}{\kilo\ohm}$ }
+  \caption{Спектр $V_b(t)$, и аттрактор для системы ``relax3ds'' при $R_b=\SI{14.72}{\kilo\ohm}$ }
   \label{atu:f:relax3ds_f_14718}
 \end{figure}
 
@@ -691,7 +719,7 @@ $V\Tidx{on,3}  = \SI{1.81}{\volt}$.
 
 \begin{figure}[htb!]
   \centerline{\includegraphics[width=0.6\textwidth]{p/relax3ds_t_036060.png} }
-  \caption{Зависимости $V_b(t)$, $V_i(t)$ для системы рис.~\ref{atu:f:relax3ds_schem} при $R_b=\SI{36.06}{\kilo\ohm}$ }
+  \caption{Зависимости $V_b(t)$, $V_i(t)$ для системы ``relax3ds'' при $R_b=\SI{36.06}{\kilo\ohm}$ }
   \label{atu:f:relax3ds_t_36060}
 \end{figure}
 
@@ -707,7 +735,7 @@ $V\Tidx{on,3}  = \SI{1.81}{\volt}$.
     ~
     \includegraphics[width=0.48\textwidth]{p/relax3ds_v1v2v3_036060.png}
   }
-  \caption{Спектр $V_b(t)$, и аттрактор для системы рис.~\ref{atu:f:relax3ds_schem} при $R_b=\SI{36.06}{\kilo\ohm}$ }
+  \caption{Спектр $V_b(t)$, и аттрактор для системы ``relax3ds'' при $R_b=\SI{36.06}{\kilo\ohm}$ }
   \label{atu:f:relax3ds_f_36060}
 \end{figure}
 
@@ -722,6 +750,9 @@ $V\Tidx{on,3}  = \SI{1.81}{\volt}$.
 
 \section{Модели систем из трёх связанных релаксационных генераторов}
 
+С учётом вышеизложенного, модель системы связанных релаксационных генераторов
+можно представить в следующем виде:
+%
 \begin{equation}
   \begin{cases}
     V_b = V_{cc} - R_b ( I_1 + I_2 + I_3 ), \\
@@ -732,18 +763,22 @@ $V\Tidx{on,3}  = \SI{1.81}{\volt}$.
   \end{cases}.
     \label{atu:eq:relax3}
 \end{equation}
-
-Параметры: \\
+%
+где: \\
 $R_b$ --- сопротивление в цепи питания (идентифицируемый параметр), \\
 $C_i$ --- ёмкости каждого из релаксационных генераторов, \\
 $R_{vi}$ --- сопротивления зарядки релаксационных генераторов, \\
 $R_{i}$ --- сопротивления зарядки релаксационных генераторов, \\
 $I_{i,\mathrm{leak}}$ --- токи утечки.
 
-Функции $ \mathrm{On}_i() $ определяют моменты переключения генераторов,
-задаются алгоритмически (гистерезис). Определяются параметрами
-$V_{on}$, $V_{off}$.
+Функции $ \mathrm{On}_i() $ определяют моменты срабатывания переключающих элементов,
+и ввиду их релейно-гистерезисного вида
+задаются алгоритмически. Определяющими параметрам при этом являются
+$V_{\mathrm{on},i}$, $V_{\mathrm{off},i}$.
 
+В общем случае токи утечки $I_{i,\mathrm{leak}}$ описываются нелинейными функциями.
+В простейших случаях утечку можно моделировать как омическое сопротивление:
+%
 \begin{equation}
   \begin{cases}
     V_b = V_{cc} - R_b ( I_1 + I_2 + I_3 ), \\
@@ -754,27 +789,36 @@ $V_{on}$, $V_{off}$.
   \end{cases}.
     \label{atu:eq:relax3_linleak}
 \end{equation}
-
+%
+где
 $R_{i,\mathrm{leak}}$ --- сопротивления утечки.
+При этом довольно часто выполняется соотношение
+$R_{i} \ll R_{i,\mathrm{leak}} $, и величинами
+$R_{i}$ можно пренебречь. При выполнении условий
+$V_b \gg V_i$ токами утечки можно пренебречь совсем,
+однако для хаотических режимов выполнение этого условия нехарактерно,
+так как оно подразумевает слабую связь между генераторами.
+Конкретный вид утечки следует выбирать, исходя из поведения системы
+при условии $V_b \approx V_i$
 
-\Cmt{графики сравнения?}
+\Cmt{если надо: модели в ``qontrol'' c одним / тремя релаксаторами, графики сравнения?}
 
 \section{Критерии идентификации систем из трёх связанных релаксационных генераторов}
 
 Рассмотрим возможные критерии для системы релаксационных
-генераторов. В Первую очередь имеет смысл
+генераторов. В первую очередь имеет смысл
 рассмотреть критерии, основанные на физических принципах.
 Как уж было отмечено, использование в качестве критерия периода
 колебаний неприменимо даже в случае сложно-периодического режима,
 не говоря уже про хаотический.
 Непосредственное применение энергетических критериев
-для систем такого типа также не вполне обосновано --
+для систем такого типа также не вполне обосновано ---
 в системе такое соотношение между возможностями источника энергии
 и потребителями (релаксационными элементами), что
 потребление энергии лимитируется именно потребителями.
 При этом моменты переключения определяются соответствующими разностями
 потенциалов, следовательно, в первую очередь стоит рассматривать
-интегральные величины, скорее всего -- скользящие средние
+интегральные величины, скорее всего --- скользящие средние
 от $V_b$, $V_1$, $V_2$, $V_3$.
 
 Рассмотрим первый из кандидатов в критерии:
@@ -888,7 +932,7 @@ P?~(рис.~\ref{atu:f:relax3ds_schem})
 относительно номинала (20~\%). В исследовательских
 задачах этот недостаток нивелируется предварительной калибровкой.
 Время установления после передачи требуемого значения составляет порядка
-$\SI{20}{\milli\second}$,
+$\SI{20}{\micro\second}$,
 что превышает время передачи. В свою очередь,
 для рассматриваемой задачи задачи требуемое время
 переключения --- от сотни миллисекунд до единиц секунд.
@@ -929,7 +973,7 @@ $p_{ge}$, $p_{le}$, $p_{ee}$.
 (отсчётов $V_b(t)$,$V_1(t)$,$V_2(t)$,$V_3(t)$) с реального генератора,
 с последующим моделированием процесса идентификации в программе ``qontrol''.
 
-Параметры первого эксперимента для системы ``relax3d'': \Cmt{Define!}
+Параметры первого эксперимента для системы ``relax3d'':
 %
 \begin{equation}
   R_{b,\min} = 
@@ -950,17 +994,13 @@ $p_{ge}$, $p_{le}$, $p_{ee}$.
   \label{atu:f:relax3d_id}
 \end{figure}
 
+\Cmt{здесь ещё два рисунка --- надо перерисовать или даже перемерять --- слишком разные условия}
 
-% T_m = 1 s \omega_p = 3.1415926 \phi_p=3.1415926
-% m_005151.txt : 5.151k  - 24.837k (28-135) 15.00 +- 9.843
-% m_009935.txt : 9.935k  - 22.998k (54-125) 16.47 +- 6.532
-% m_013062.txt : 13.062k - 27.965k (71-152) 20.51 +- 7.452
-% m_005519.txt : 5.519k  - 18.398k (30-100) 11.96 +- 6.440
 
 Для системы ``'relax3ds' представлены результаты четырёх экспериментов,
 проведённых в аналогичных условиях.
 
-Параметры первого эксперимента для системы ``relax3ds'': \Cmt{Define!}
+Параметры первого эксперимента для системы ``relax3ds'':
 %
 \begin{equation}
   \begin{array}{c}
@@ -985,6 +1025,16 @@ $p_{ge}$, $p_{le}$, $p_{ee}$.
   \caption{Процесс идентификации системы ``relax3ds'' при условиях \ref{atu:eq:relax3ds_test1_cond}}
   \label{atu:f:relax3ds_id_0}
 \end{figure}
+
+Условия этого эксперимента были выбраны так, что бы проверить работоспособность
+на близкой к максимальной амплитуде изменения параметра.
+Результаты моделирования показывают, что все три подхода к определению
+$p_e$ позволяют в этих условиях получить работоспособную систему идентификации.
+Время реакции на переключение составляет 0.3--0.4~s. При этом обнаруживается
+различие методов на верхнем и нижнем пределах:
+$p_{ge}$ и $p_{le}$ обеспечивают максимальную точность идентификации на нижнем пределе,
+а $p_{ee}$ --- на верхнем. Суммарно ошибки идентификации для всех трех методов
+практически идентичны.
 
 
 Параметры второго эксперимента для системы ``relax3ds'':
@@ -1012,6 +1062,13 @@ $p_{ge}$, $p_{le}$, $p_{ee}$.
   \label{atu:f:relax3ds_id_1}
 \end{figure}
 
+Второй эксперимент, с меньшей амплитудой изменения параметра,
+при сохранении работоспособности, и, в целом,
+немного меньшими ошибками идентификации,
+проявляет несколько иную картину:
+верхний предел уверенно определяется всеми методами,
+а нижний лучше идентифицируется при использовании
+$p_{ee}$.
 
 
 Параметры третьего эксперимента для системы ``relax3ds'':
@@ -1039,6 +1096,14 @@ $p_{ge}$, $p_{le}$, $p_{ee}$.
   \label{atu:f:relax3ds_id_2}
 \end{figure}
 
+В данном эксперименте среднее значение идентифицируемого параметра
+сдвинуто в сторону больших значений. И, как следствие,
+при идентификации на верхнем пределе ошибка максимальна.
+В первую очередь, это связана с тем, что на этом участке
+чувствительность критерия к изменению параметра минимальна.
+Играет свою роль и увеличение ошибок при моделировании
+режима с минимальным энергопотреблением.
+Тем не менее, даже в этих условиях методы сохраняют работоспособность.
 
 
 Параметры четвёртого эксперимента для системы ``relax3ds'':
@@ -1066,10 +1131,21 @@ $p_{ge}$, $p_{le}$, $p_{ee}$.
   \label{atu:f:relax3ds_id_3}
 \end{figure}
 
+Результаты четвёртого эксперименты ещё раз
+подтверждают работоспособность предложенных методов.
+В целом, в различных экспериментах различные методы
+показывали лучшие результаты, однако в целом результаты
+примерно равнозначные. Практически невозможно в данных условиях выбрать лучший
+метод, с учётом того факта, что значения идентифицируемого
+параметра заранее не известны.
+
+
 
 
 \section{Выводы по разделу \thechapter}
 
 Выводы.
+
+Воно працюэ!
 
 
