Add figures for relax

--- a/p7/relax_real.tex
+++ b/p7/relax_real.tex
@@ -14,15 +14,23 @@
 В первую очередь это импульсные системы питания, такие как
 современные блоки питания электронной техники, DC/DC преобразователи.
 
-Основными компонентами релаксационного генератора являются
-времязадающая цепочка, чаще всего RC-цепочка,
-и нелинейный (гистерезисный) переключающий элемент,
+Основными компонентами релаксационного генератора
+(рис.~\ref{atu:f:relax_types})
+являются
+времязадающая цепочка, чаще всего RC-цепочка (или пара),
+и нелинейный (гистерезисный) переключающий элемент (CTRL),
 переключающий генератор из режима зарядки в режим разрядки и наоборот.
 В качестве такого элемента может использоваться
 динистор, газоразрядная лампа, триггер Шмидта,
 другие электронные схемы.
 
-\Cmt{Здесь условная схема}
+\begin{figure}[htb!]
+  \centerline{\includegraphics[width=0.8\textwidth]{p/relax_types.png} }
+  \caption{Условные схемы релаксационных генераторов.}
+  \label{atu:f:relax_types}
+\end{figure}
+
+\Cmt{Описать разницу в схемах}
 
 Параметрами такого генератора являются
 напряжения включения $V\Tidx{on}$ и выключения $V\Tidx{off}$
@@ -234,11 +242,23 @@ $I_i(t)$ --- потребляемый им ток.
 из-за сложных трудно воспроизводимых гистерезисных явлений в
 ферромагнитном сердечнике. При этом относительно высокий частотный диапазон
 затрудняет процесс измерения. Поэтому, в данном исследовании
-из этой работы будет использоваться только переключающий элемент.
+из этой работы будет использоваться только переключающий элемент~(рис.~\ref{atu:f:relax3d_switch}).
 
-\Cmt{здесь может быть схема и графики характеристик}
+\begin{figure}[htb!]
+  \centerline{\includegraphics[width=0.25\textwidth]{p/relax3d_switch.png} }
+  \caption{Схема переключающего элемента на комплиментарных биполярных транзисторах}
+  \label{atu:f:relax3d_switch}
+\end{figure}
+
+\Cmt{здесь может быть графики характеристик}
 
 
+
+\begin{figure}[htb!]
+  \centerline{\includegraphics[width=0.7\textwidth]{p/r_fb-V_on.png} }
+  \caption{Экспериментальная зависимость $V\Tidx{on}(R_{fb})$ для переключающего элемента на двух комплиментарных биполярных транзисторах}
+  \label{atu:f:relax3d_bjt_v_onn}
+\end{figure}
 
 
 
@@ -254,7 +274,7 @@ $I_i(t)$ --- потребляемый им ток.
 на паре комплиментарных транзисторов~(рис.~\ref{atu:f:relax3d_schem}).
 
 \begin{figure}[htb!]
-  \centerline{\includegraphics[width=0.8\textwidth]{p/relax3d_schem.png} }
+  \centerline{\includegraphics[width=0.96\textwidth]{p/relax3d_schem.png} }
   \caption{Электрическая схема \RelaxBjtIi}
   \label{atu:f:relax3d_schem}
 \end{figure}
@@ -748,6 +768,13 @@ $V\Tidx{on,3}  = \SI{1.81}{\volt}$.
 не использование данных режимов, которые в этом контексте не представляют
 особого интереса.
 
+Сравнение динамики систем ``relax3d'' и ``relax3ds''
+позволяет сделать наблюдение,
+что при прочих равных первая из них демонстрирует меньший уровень связи между
+релаксационными элементами. То есть для получения
+аналогичного поведения для второй системы следует задавать меньшие значения $R_b$.
+Это связано большим значением безразмерной величины $v$ для второй системы,
+из-за относительно больших значений $V\Tidx{off}$, $V\Tidx{on}$.
 
 
 \section{Модели систем из трёх связанных релаксационных генераторов}
@@ -801,7 +828,8 @@ $V_b \gg V_i$ токами утечки можно пренебречь совс
 однако для хаотических режимов выполнение этого условия нехарактерно,
 так как оно подразумевает слабую связь между генераторами.
 Конкретный вид утечки следует выбирать, исходя из поведения системы
-при условии $V_b \approx V_i$
+при условии $V_b \approx V_i$.
+
 
 \Cmt{если надо: модели в ``qontrol'' c одним / тремя релаксаторами, графики сравнения?}
 
@@ -823,8 +851,8 @@ $V_b \gg V_i$ токами утечки можно пренебречь совс
 потребление энергии лимитируется именно потребителями.
 При этом моменты переключения определяются соответствующими разностями
 потенциалов, следовательно, в первую очередь стоит рассматривать
-интегральные величины, скорее всего --- скользящие средние
-от $V_b$, $V_1$, $V_2$, $V_3$.
+интегральные величины, скорее всего --- каким-либо способом усреднённые значения
+$V_b$, $V_1$, $V_2$, $V_3$.
 
 Рассмотрим первый из кандидатов в критерии:
 \begin{equation}
@@ -924,7 +952,7 @@ $V_b \gg V_i$ токами утечки можно пренебречь совс
 в качестве дополнительного сопротивления,
 подключенного к шине питания через разъемы
 P7~(рис.~\ref{atu:f:relax3d_schem}) и
-P?~(рис.~\ref{atu:f:relax3ds_schem})
+P5~(рис.~\ref{atu:f:relax3ds_schem})
 цифрового управляемого потенциометра CAT5171.
 Данный электронный компонент представляет собой
 управляемую по протоколу I2C сборку подключаемых резисторов.
@@ -972,10 +1000,19 @@ $\SI{20}{\micro\second}$,
 левый график показывает динамику агентов, а правый --- полученные
 значения идентифицируемого параметра для различный способов:
 $p_{ge}$, $p_{le}$, $p_{ee}$.
+При моделировании процесса идентификации в программе ``qontrol''(рис.~\ref{atu:f:relax3d_id_qontrol})
+в качестве данных с объекта использовались реальные данные,
+записанные в файлы, которые служили источником данных.
+
+\begin{figure}[htb!]
+  \centerline{\includegraphics[width=0.9\textwidth]{p/relax3d_id_qontrol.png} }
+  \caption{Модель системы идентификации для генератора ``relax3d'' в программе ``qontrol'' с использованием данных физического эксперимента}
+  \label{atu:f:relax3d_id_qontrol}
+\end{figure}
 
 Для системы ``'relax3d' представлены результаты трех экспериментов,
 каждый из которых заключался в получении данных
-(отсчётов $V_b(t)$,$V_1(t)$,$V_2(t)$,$V_3(t)$) с реального генератора,
+(отсчётов $V_b(t)$, $V_1(t)$, $V_2(t)$, $V_3(t)$) с реального генератора,
 с последующим моделированием процесса идентификации в программе ``qontrol''.
 
 Параметры первого эксперимента для системы ``relax3d'':
