[sub]section names adjusted

--- a/p5/duff_testsys.tex
+++ b/p5/duff_testsys.tex
@@ -52,7 +52,7 @@ $ \beta \approx 2 $.
 
 % }}}2
 
-\subsection{Анализ критериев}  % {{{2
+\subsection{Анализ выбор критериев}  % {{{2
 
 Критерий
 $\overline{x^2}$
