--- a/p5/ross_testsys.tex
+++ b/p5/ross_testsys.tex
@@ -76,7 +76,7 @@ $ c \in [2; 50] $, $c_0=5.88$.
 
 % }}}2
 
-\subsection{Анализ критериев}  % {{{2
+\subsection{Анализ и выбор критериев}  % {{{2
 
 Критерий
 $ z_{\max}$, $ \overline{z} $.
