--- a/p5/testsys.tex
+++ b/p5/testsys.tex
@@ -1,4 +1,4 @@
-\chapter{Тестовые хаотические системы }
+\chapter{Анализ и идентификация тестовых хаотических систем }
 \label{atu:ch:testsys}
 
 \input{lor_testsys.tex}   % p5/lor_testsys.tex   % 
