--- a/p7/relax_real.tex
+++ b/p7/relax_real.tex
@@ -1,4 +1,4 @@
-\chapter{Идентификация системы связанных релаксационных генераторов}
+\chapter{Моделирование и идентификация физической системы связанных релаксационных генераторов}
 
 \newcommand{\RelaxBjtIi}{системы из трёх связанных релаксационных генераторов на паре комплиментарных транзисторов}
 \newcommand{\RelaxShIi}{системы из трёх связанных релаксационных генераторов на основе триггеров Шмидта}
