--- a/p5/chua_testsys.tex
+++ b/p5/chua_testsys.tex
@@ -139,7 +139,7 @@ $ \mu \in [ 1.29 ; 5.6 ] $.
 
 % }}}2
 
-\subsection{Анализ критериев}  % {{{2
+\subsection{Анализ и выбор критериев}  % {{{2
 
 
 Для определения вида критерия рассмотрим зависимости
