--- a/p5/fric_testsys.tex
+++ b/p5/fric_testsys.tex
@@ -76,7 +76,7 @@ $ f_{df}( x, \dot{x}, \ldots)  $ -- сила сухого трения.
 
 % }}}2
 
-\subsection{Анализ критериев}  % {{{2
+\subsection{Анализ и выбор критериев}  % {{{2
 
 Для обеспечения возможности применения методов идентификации,
 необходимо существование критерия
