--- a/p5/lor_testsys.tex
+++ b/p5/lor_testsys.tex
@@ -154,7 +154,7 @@ $x$. С другой стороны, так как параметр $r$ опре
 % }}}2
 
 
-\subsection{Анализ критериев}  % {{{2
+\subsection{Анализ и выбор критериев}  % {{{2
 
 Исходя из вышеизложенного, в первую очередь следует проверить применимость
 критерия вида $q_{x^2}$. Тем не менее, проверим все
