--- a/p5/spr_a_testsys.tex
+++ b/p5/spr_a_testsys.tex
@@ -97,7 +97,7 @@
 % }}}2
 
 
-\subsection{Анализ критериев}  % {{{2
+\subsection{Анализ и выбор критериев}  % {{{2
 
 В первую очередь, на аналогии с системой Лоренца,
 проверим возможность применения энергетических критериев,
