--- a/p5/vdp_testsys.tex
+++ b/p5/vdp_testsys.tex
@@ -33,7 +33,7 @@
 % }}}2
 
 
-\subsection{Анализ критериев}  % {{{2
+\subsection{Анализ и выбор критериев}  % {{{2
 
 Критерий:
 $\overline{T}$ + люфт + sign.
