Relaxetion switch element properties added

--- a/artrefs.bib
+++ b/artrefs.bib
@@ -92,7 +92,7 @@
 
 @Book{berje_order_in_chaos,
   title = {Порядок в хаосе: О детерминистском подходе к турбулентности},
-  author = {Берже П., and Помо, И. and Видаль, К. },
+  author = {Берже, П. and Помо, И. and Видаль, К. },
   location = {М.},
   publisher = {Мир},
   year = {1991},
@@ -157,6 +157,17 @@
   doi = {10.1109/81.331536},
   language = {english},
   pages = {771--774},
+}
+
+@Article{kennedy1999,
+  author = {Michael Peter Kennedy and A S Elwakil},
+  title = {A low-voltage, low-power, chaotic oscillator, derived from a relaxation oscillator},
+  journal = {Miscroelectronics Journal},
+  year = {2000},
+  volume = {31},
+  issue = {6},
+  doi = {10.1016/S0026-2692(99)00150-0},
+  pages = {459--468}
 }
 
 @Book{koltsova_nl_dyn_chem,
