--- a/atuworks.bib
+++ b/atuworks.bib
@@ -101,7 +101,7 @@
 @Article{atu_khar_autodor25,
   title = {Критерии идентификации параметров хаотической динамики управляемого объекта},
   author = {Гуда, А. И. and Михалёв, А. И. and Деревянко, А. И.},
-  journal = {Автомобільний транспорт.  -– Вісник Харківського національного автодорожнього університету.},
+  journal = {Автомобільний транспорт.  -- Вісник Харківського національного автодорожнього університету.},
   language     = {russian},
   langid       = {russian},
   year = {2009},
@@ -290,7 +290,7 @@
 
 @Article{atu_electronika2013,
   title = {Physical background in identification criterion synthesis},
-  author = {Guda, A. I and Mikhalyov, A. I. and Derevjanko, A. I.  and Kisała },
+  author = {Guda, A. I and Mikhalyov, A. I. and Derevjanko, A. I.  and Kisała, P },
   journal = {Elektronika  konstrukcje, technologie, zastosowania (Index Copernicus)},
   language     = {english},
   langid       = {english},
@@ -387,7 +387,7 @@
 @Article{atu_st105,
   title = {Визначення гранулометричного складу матеріалу у повітряному потоці з використанням діаграм Пуанкаре},
   xdata = {st},
-  author = {Сухомлин, Р. О. and Михальов, А. И. and  Прядко, Н. С. and Тернова, К. В and Гуда, А. И.},
+  author = {Сухомлин, Р. О. and Михальов, А. И. and  Прядко, Н. С. and Тернова, К. В. and Гуда, А. И.},
   language     = {russian},
   langid       = {russian},
   year = {2016},
