--- a/p7/relax_real.tex
+++ b/p7/relax_real.tex
@@ -8,7 +8,7 @@
 
 Релаксационные генераторы, прямо или косвенно, получили широкое распространение
 в схемотехнике. В первую очередь --- как собственно генераторы
-сигналов, в первую очередь пилообразной формы~[??].
+сигналов, в первую очередь пилообразной формы~\cite{horowitz,mishenko_du_small_relax}.
 Некоторые подсистемы электрических схем, хоть и не относятся непосредственно к
 релаксационными генераторами, проявляют схожую динамику.
 В первую очередь это импульсные системы питания, такие как
@@ -17,7 +17,10 @@
 Основными компонентами релаксационного генератора
 (рис.~\ref{atu:f:relax_types})
 являются
-времязадающая цепочка, чаще всего RC-цепочка (или пара),
+накопительный элемент, чаще всего конденсатор C,
+цепи заряда и разряда (в общем случае нелинейные),
+представленные на условной схеме обозначениями
+$R\Tidx{ch}$ и $R\Tidx{dis}$ соответственно,
 и нелинейный (гистерезисный) переключающий элемент (CTRL),
 переключающий генератор из режима зарядки в режим разрядки и наоборот.
 В качестве такого элемента может использоваться
@@ -30,11 +33,30 @@
   \label{atu:f:relax_types}
 \end{figure}
 
-\Cmt{Описать разницу в схемах}
+Представленные на рис.~\ref{atu:f:relax_types}
+основные виды релаксационных генераторов отличаются
+тем, как переключающий элемент (CTRL)
+подключает цепи заряда и разряда. А схеме (a)
+одновременно подключена только одна из этих цепей.
+Такое схемотехническое решение используется достаточно редко.
+Схема (b) характеризуется тем, что цепь разряда
+подключена постоянно, а цепь разряда
+включатся при достижении определённого условия. Такое подключение
+характерно для схем импульсных преобразователей и стабилизаторов
+напряжения. В схеме (c) наоборот, процесс заряда происходит постоянно,
+а разряд -- при условии заданном переключающим элементом. Такое
+включение характерно для генераторов пилообразных и других сигналов.
+В данной работе в основном будут рассмотрены системы и их модели,
+основанные на схеме (с). Принципиальной разницы при использовании
+и моделировании других подобных схем не наблюдается.
+Существуют и другие схемы, использующие принцип работы
+релаксационного генератора, например мультивибраторы,
+но исследование их моделей выходит за рамки данной работы.
 
-Параметрами такого генератора являются
+
+Основными параметрами схем с релаксационными генераторами являются
 напряжения включения $V\Tidx{on}$ и выключения $V\Tidx{off}$
-переключающего элемента,
+переключающего элемента (CTRL),
 напряжение питания $V\Tidx{cc}$,
 ёмкость конденсатора $C$,
 сопротивления цепей зарядки $R\Tidx{ch}$
@@ -53,8 +75,6 @@
 $V_{i}$ и $ \mathrm{On}_{i}()$.
 При этом  $ \mathrm{On}_{i}( V\Tidx{c}, \ldots )$ представляет собой
 релейный гистерезисный элемент, обладающий памятью и задаётся алгоритмически.
-
-\Cmt{Может быть рисунок релейного гистерезиса}
 
 В этих условиях примем для определённости
 (а в большинстве схемотехнических реализаций это так и есть),
@@ -218,6 +238,9 @@ $ \overline{v(t_u)} \to v\Tidx{on}$.
 $I_i(t)$ --- потребляемый им ток.
 
 
+\section{Свойства и модели переключающего элемента на паре биполярных транзисторов}
+\label{atu:sec:relax3d_sw}
+
 Как уже было отмечено, для реализации переключающего элемента релаксационного генератора
 существует широкий спектр возможностей. Тем не менее, в рамках данной работы
 не ставятся задачи ни анализа работы какого-то определённого элемента,
@@ -234,7 +257,7 @@ $I_i(t)$ --- потребляемый им ток.
 
 Одним из возможных способов реализации переключающего элемента
 является схема из двух комплиментарных биполярных транзисторах,
-применённая A.S.~Elwakil и M.P.~Kennedy~[kennedy1999]
+применённая A.S.~Elwakil и M.P.~Kennedy~\cite{kennedy1999}
 для создания низковольтного, маломощного хаотического генератора.
 Рассмотренная в упомянутой работе схема хаотического генератора
 весьма интересна, но включает индуктивный элемент,
@@ -250,9 +273,56 @@ $I_i(t)$ --- потребляемый им ток.
   \label{atu:f:relax3d_switch}
 \end{figure}
 
-\Cmt{здесь может быть графики характеристик}
+
+Результаты численного моделирования работы данной схемы, полученные с помощью
+программы моделирования ``ngspice'' 26 представлены на рис.~\ref{atu:f:relax3d_sw_vah}.
+Исходная схема была расширена управляемым источником питания и сопротивлением нагрузки $R_n$.
+Это позволило получить семейство вольт-амперных характеристик при разных значениях $R_{fb}$.
+
+\begin{figure}[htb!]
+  \centerline{\includegraphics[width=0.6\textwidth]{p/relax3d_sw_va.png} }
+  \caption{Семейство расчётных вольт-амперных характеристик переключающего элемента на комплиментарных биполярных транзисторах,
+  в сравнении с реальными данными}
+  \label{atu:f:relax3d_sw_vah}
+\end{figure}
+
+Все вольт-амперные характеристики, полученные путём моделирования,
+имеют S-образную форму, характерную для бистабильных
+переключающих элементов, таких как динисторы, газоразрядные лампы и т.д.
+Участки характеристик, соответствующие отрицательному
+дифференциальному сопротивлению, являются неустойчивыми,
+и в реальных схемах не реализуются.
+Поэтому реальные данные для этих участков не представлены.
+То, что эти значения
+были получены в программе моделирования,
+свидетельствует о недостаточной адекватности применяемых моделей.
+Еще одним подтверждением ограниченной адекватности моделей, используемых
+в программах для моделирования, основанных на ``spice'',
+является тот факт, что в рассмотренных программах из этого семейства
+не удалось достичь работоспособности модели релаксационного генератора
+с указанным переключающим элементом.
+
+Сложная нелинейная вольт-амперная характеристика рассматриваемого переключающего элемента,
+тем не менее, в широком диапазоне параметров,
+не служит серьёзным препятствием для моделирования
+релаксационного генератора в целом.
+Как следует из представленных графиков, ток до момента переключения
+не превышает $\SI{2e-6}{\ampere}$, а на значительной части рабочего участка
+не превышает $\SI{1e-8}{\ampere}$, что для многих (но не для всех)
+условий может рассматриваться как просто выключенное состояние, $I\Tidx{dis}=0$.
 
 
+С другой стороны, после переключения эффективное сопротивление этого элемента
+достаточно мало, $R\Tidx{dis} \approx \SI{20}{\ohm}$,
+что для аналитической оценки практически эквивалентно мгновенному разряду,
+а для численного моделирования как ошибки в определении $R\Tidx{dis}$
+практически на порядок, так и  нелинейная зависимость существенной роли не играют.
+Поэтому, при используемых диапазонах параметров, для моделирования данный элемент можно
+представить в виде переключающий функции $\mathrm{On}(V)$.
+Параметры этой функции -- $V\Tidx{on}$ и $V\Tidx{off}$
+можно определить экспериментально. Экспериментально полученная зависимость для $V\Tidx{on}(R_{fb})$
+представлена на (рис.~\ref{atu:f:relax3d_bjt_v_onn}), а величина $V\Tidx{off}$
+оказалась практически не зависящий от $R_{fb}$.
 
 \begin{figure}[htb!]
   \centerline{\includegraphics[width=0.7\textwidth]{p/r_fb-V_on.png} }
@@ -260,9 +330,48 @@ $I_i(t)$ --- потребляемый им ток.
   \label{atu:f:relax3d_bjt_v_onn}
 \end{figure}
 
+Как и для многих электронных схем, использующих свойства p-n переходов,
+для данной схемы характерна сильная, практически экспоненциальная зависимость
+тока от температуры. В данной работе при проведении экспериментов
+разброс температуры не превышал $\SI{5}{\kelvin}$, что позволило
+избежать излишнего усложнения модели.
+
+Следует отметить и определённое ограничение при использовании
+простой $\mathrm{On}{v}$ модели переключающего элемента.
+Для объяснения причины этого ограничения
+рассмотрим участки вольт-амперных характеристик,
+непосредственно предшествующие переключению (рис.~\ref{atu:f:relax3d_sw_vah_mini}).
+
+\begin{figure}[htb!]
+  \centerline{\includegraphics[width=0.6\textwidth]{p/relax3d_sw_va_mini.png} }
+  \caption{Участки вольт-амперных характеристик переключающего элемента,непосредственно предшествующие переключению}
+  \label{atu:f:relax3d_sw_vah_mini}
+\end{figure}
+
+В этих условиях графики похожи на характеристики элементов или же схем,
+предназначенных для стабилизации напряжения, т.е. т этих условиях
+существенные изменения тока соответствуют малым изменениям падения напряжения.
+И если в схеме релаксационного генератора сопротивление $R\Tidx{ch}$ будет настолько
+большим, что ток не превысит максимального тока ``стабилизации'',
+то напряжение $V\Tidx{on}$ никогда не будет достигнуто,
+и генерации колебаний не будет.
+Более того, при приближении к этому режиму
+адекватность модели будет всё более сомнительна.
+Один из способов противостояния ухудшению адекватности
+заключается в учёте существенно нелинейной зависимости тока утечки.
+Однако, как показали результаты моделирования,
+улучшение адекватности хоть и наблюдаются,
+но применять такое усложнение модели имеет смысл только в достаточно
+узком диапазоне параметров, что не оказывает существенного влияния на
+достижение основных целей данной работы.
+
+Таким образом, релаксационный генератор с переключающим
+элементом на паре комплиментарных биполярных транзисторов
+может использоваться при построении системы связанных генераторов,
+а его поведение может быть описано достаточно простой моделью
+в широком диапазоне параметров.
 
 
-\cite{mishenko_du_small_relax}
 
 \section{Система из трёх связанных релаксационных генераторов на паре комплиментарных транзисторов}
 \label{atu:sec:relax3d}
@@ -593,7 +702,7 @@ $\SI{0.2}{\hertz}$, что с учётом погрешностей измере
 значениями величин
 $V\Tidx{on}$, $V\Tidx{off}$,
 то триггер следует реализовывать,
-используя операционные усилители~[Хоровиц].
+используя операционные усилители~\cite{horowitz}.
 При фиксированных значения этих параметров,
 можно использовать триггеры Шмидта в интегральном исполнении,
 подобрав соответствующую серию.
